--- a/config/baseline.yml
+++ b/config/baseline.yml
@@ -1,44 +1,27 @@
 MODEL:
   BACKBONE:
-    PRETRAIN: True
     PRETRAIN_PATH: 'pretrained/vgg16_caffe-292e1171.pth'
   HEADS:
     NUM_CLASSES: 21
-  DEVICE_ID: '("0, 1, 2, 3")'
+  DEVICE_ID: '("1")'
 
 INPUT:
   SIZE_TRAIN: [300, 300]
   SIZE_TEST: [300, 300]
 
 DATA:
-  ROOT: '/home/workspace/data_dirs/VOCdevkit/VOC2007'
-
+  ROOT: '/home/workspace/merlin/data_dirs/VOCdevkit/VOC2007'
 
 SOLVER:
-  BATCH_SIZE: 48
+  BATCH_SIZE: 32
   CHECKPOINT_PERIOD: 5
   EVAL_PERIOD: 10
   OPTIMIZER_NAME: 'Adam'
   MAX_EPOCHS: 400
-  BASE_LR: 0.01
-
-  BIAS_LR_FACTOR: 1.0
+  BASE_LR: 0.001
   WEIGHT_DECAY: 0.0005
-  WEIGHT_DECAY_BIAS: 0.0005
-
-  STEPS: [50, 100, 150]
+  STEPS: [400000, 500000, 600000]
   GAMMA: 0.1
-
-  WARMUP_FACTOR: 0.01
-  WARMUP_ITERS: 0
-  WARMUP_METHOD: 'linear'
-
-#TEST:
-#  IMS_PER_BATCH: 128
-#  RE_RANKING: 'no'
-#  WEIGHT: "path"
-#  NECK_FEAT: 'after'
-#  FEAT_NORM: 'yes'
 
 OUTPUT_DIR: "output/myanchor"
 LOAD_FROM: "output/baseline/epoch_2.pth"
