modified:   config/baseline.yml 	modified:   config/defaults.py 	modified:   data/dataloader.py 	new file:   eval.py 	modified:   modeling/backbones/vgg.py 	modified:   modeling/build.py 	modified:   modeling/heads/ssd_head.py 	modified:   modeling/losses/ssdloss.py deleted:    modeling/utils/__pycache__/anchor_generator.cpython-37.pyc 	renamed:    modeling/utils/anchor_generator.py -> modeling/utils/anchor.py 	new file:   modeling/utils/coder.py 	modified:   modeling/utils/detection.py 	new file:   modeling/utils/iou.py 	new file:   modeling/utils/nms.py 	new file:   pidkiller.py 	modified:   test.py 	modified:   train.py 	modified:   utils/checkpoint.py 	modified:   vis.py

--- a/config/baseline.yml
+++ b/config/baseline.yml
@@ -3,7 +3,7 @@ MODEL:
     PRETRAIN_PATH: 'pretrained/vgg16_caffe-292e1171.pth'
   HEADS:
     NUM_CLASSES: 21
-  DEVICE_ID: '("1")'
+  DEVICE_ID: '("0, 1")'
 
 INPUT:
   SIZE_TRAIN: [300, 300]
@@ -11,19 +11,23 @@ INPUT:
 
 DATA:
   ROOT: '/home/workspace/merlin/data_dirs/VOCdevkit/VOC2007'
+#  ROOT: '/home/workspace/data_dirs/VOCdevkit/VOC2007'
+  VALROOT: '/home/workspace/merlin/data_dirs/VOCdevkit/VOCdevkit/'
 
 SOLVER:
-  BATCH_SIZE: 32
+  BATCH_SIZE: 16
   CHECKPOINT_PERIOD: 5
-  EVAL_PERIOD: 10
+  EVAL_PERIOD: 20
   OPTIMIZER_NAME: 'Adam'
   MAX_EPOCHS: 400
   BASE_LR: 0.001
   WEIGHT_DECAY: 0.0005
-  STEPS: [400000, 500000, 600000]
+  STEPS: [40000, 50000]
   GAMMA: 0.1
 
-OUTPUT_DIR: "output/myanchor"
-LOAD_FROM: "output/baseline/epoch_2.pth"
-
+OUTPUT_DIR: "output/with_val"
+RESUME: False
+LOAD_FROM: "output/myanchor/epoch_395.pth"
+TEST:
+  IMS_PER_BATCH: 64
 
