--- a/config/ssd.voc.yml
+++ b/config/ssd.voc.yml
@@ -39,6 +39,6 @@ DISTRIBUTE: False
 VARIRANCE: [0.1, 0.2]
 OUTPUT_DIR: "output/tem"
 
-RESUME: True
+RESUME: False
 LOAD_FROM: "output/bs16_SGD_all_trans_mymodel_changed_warmup/epoch_219.pth"
 
