--- a/config/ssd.coco.yml
+++ b/config/ssd.coco.yml
@@ -8,7 +8,7 @@ MODEL:
     NUM_CLASSES: 81
   LOSSES:
     NAME: 'SSDLoss'
-  DEVICE_ID: '("0")'
+  DEVICE_ID: '("1,2")'
 
 INPUT:
   SIZE_TRAIN: 300
@@ -38,7 +38,7 @@ SOLVER:
 DISTRIBUTE: False
 LAUNCH: False
 VARIRANCE: [0.1, 0.2]
-OUTPUT_DIR: "output/cocotrainval35k_bs32_singleGPU_same_pretrained"
+OUTPUT_DIR: "output/temp"
 
 RESUME: False
 LOAD_FROM: "output/cocotrainval35k_bs32_singleGPU_evalfixed/epoch_100.pth"
