--- a/config/ssd.voc.yml
+++ b/config/ssd.voc.yml
@@ -15,9 +15,8 @@ INPUT:
   SIZE_TEST: 300
 
 DATA:
-  TRAINROOT: '/home/workspace/merlin/data_dirs/VOCdevkit/VOC2007'
-#  ROOT: '/home/workspace/data_dirs/VOCdevkit/VOC2007'
-  VALROOT: '/home/workspace/merlin/data_dirs/VOCdevkit/VOCdevkit/VOC2007'
+  TRAINROOT: '/home/workspace/merlin/data_dirs/VOC2007'
+  VALROOT: '/home/workspace/merlin/data_dirs/VOC2007'
 
 SOLVER:
   BATCH_SIZE: 16
@@ -35,10 +34,10 @@ SOLVER:
   WARMUP: True
   WARMUP_ITERS: 1000
 
-DISTRIBUTE: False
+DISTRIBUTE: True
 VARIRANCE: [0.1, 0.2]
 OUTPUT_DIR: "output/tem"
 
 RESUME: False
-LOAD_FROM: "output/bs16_SGD_all_trans_mymodel_changed_warmup/epoch_219.pth"
+LOAD_FROM: "output/bs16_SGD_all_trans_mymodel_changed_warmup/epoch_179.pth"
 
