--- a/config/ssd.voc.yml
+++ b/config/ssd.voc.yml
@@ -2,7 +2,7 @@ MODEL:
   NAME: 'SSD'
   BACKBONE:
     NAME: 'SSDVGG'
-    PRETRAIN_PATH: 'pretrained/vgg16_caffe-292e1171.pth'
+    PRETRAIN_PATH: '/root/.cache/torch/hub/checkpoints/vgg16_caffe-292e1171.pth'
   HEADS:
     NAME: 'SSDHead'
     NUM_CLASSES: 21
@@ -15,29 +15,33 @@ INPUT:
   SIZE_TEST: 300
 
 DATA:
-  TRAINROOT: '/home/workspace/merlin/data_dirs/VOC2007'
-  VALROOT: '/home/workspace/merlin/data_dirs/VOC2007'
+  TRAINROOT: '/workspace/data_dir/VOC2007'
+#  ROOT: '/home/workspace/data_dirs/VOCdevkit/VOC2007'
+  VALROOT: '/workspace/data_dir/VOC2007'
 
 SOLVER:
-  BATCH_SIZE: 16
+  BATCH_SIZE: 64
   VAL_BATCH_SIZE: 48
   CHECKPOINT_PERIOD: 20
-  EVAL_PERIOD: 50
+  EVAL_PERIOD: 5
   OPTIMIZER_NAME: 'SGD'
-  MAX_EPOCHS: 400
+  MAX_EPOCHS: 120
   BASE_LR: 0.002
   WEIGHT_DECAY: 0.0005
   MOMENTUM: 0.9
   STEPS: [5000, 6000]
+  STEPS_EPOCH: [80, 110 ]
   GAMMA: 0.1
 
   WARMUP: True
-  WARMUP_ITERS: 1000
+  WARMUP_ITERS: 300
+  LR_RATIO: 0.001
 
 DISTRIBUTE: True
+LAUNCH: True
 VARIRANCE: [0.1, 0.2]
-OUTPUT_DIR: "output/tem"
+OUTPUT_DIR: "output/voc_ddp"
 
 RESUME: False
-LOAD_FROM: "output/bs16_SGD_all_trans_mymodel_changed_warmup/epoch_179.pth"
+LOAD_FROM: "output/bs16_SGD_all_trans_mymodel_changed_warmup/epoch_219.pth"
 
